k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: event-app
  labels:
    name: event-app
    app: deco3801-demo
